get the logo to align correctly with the accompanying text

--- a/app/assets/stylesheets/partials/companies.scss
+++ b/app/assets/stylesheets/partials/companies.scss
@@ -22,8 +22,32 @@
 
 .company-logo-container {
   float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.company-logo-outside-border {
+  padding: 1px;
+  background: rgba(0, 0, 0, 0.3);
+
+  @include border-radius(2px);
+}
+
+.company-logo-inner-border {
+  border: 4px solid #fff;
+
+  @include border-radius(2px);
 }
 
 .company-page-logo {
-  width: 100%;
+  max-width: 300px;
 }
+
+.company-overview {
+  display: table-cell;
+  vertical-align: top;
+  width: 10000px;
+
+  height: 100%;
+}
+
